# auto_switch_dark_mode

./: Cargo.toml  turns.yml
src/: main.rs
